# VulkanIsland

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  Vulkan Island.sln  Vulkan Island.sln.DotSettings  VulkanIsland.sln  compile-materials.py  compile-shaders.py
VulkanIsland/: .gitignore  CMakeLists.txt  CMakeSettings.json  VulkanIsland.vcxproj  VulkanIsland.vcxproj.filters  build.py  compile.sh  compile_d.sh  conanfile.py  conanfile.txt  config.h.in  config.hxx.in
VulkanIsland/cmake/: Findglfw3.cmake
VulkanIsland/contents/Hebe/: scene.gltf
VulkanIsland/contents/Hebe/textures/: HebehebemissinSG1_baseColor.tga
VulkanIsland/contents/inheritance/: scene.gltf
VulkanIsland/contents/sponza/: scene.gltf
VulkanIsland/contents/sponza/textures/: background_ddn.tga  chain_texture.tga  spnza_bricks_a_diff.tga  sponza_ceiling_a_diff.tga  sponza_column_b_ddn.tga  sponza_column_c_ddn.tga  sponza_curtain_blue_diff.tga  sponza_flagpole_diff.tga  sponza_thorn_diff.tga  vase_ddn.tga
VulkanIsland/include/: vulkan_config.hxx
VulkanIsland/include/entityx/: Entity.h  entityx.hh
VulkanIsland/includes/: config.h
VulkanIsland/shaders/: shader.frag  shader.vert
VulkanIsland/src/: Makefile  TARGA_loader.cxx  TARGA_loader.h  TARGA_loader.hxx  VulkanIsland  buffer.cxx  buffer.h  buffer.hxx  commandBuffer.hxx  command_buffer.h  command_buffer.hxx  debug.cxx  debug.h  debug.hxx  descriptor.cxx  descriptor.hxx  device.cxx  device.h  device.hxx  device_defaults.h  device_defaults.hxx  ecs.hxx  glTFLoader.cxx  glTFLoader.hxx  helpers.h  helpers.hxx  image.cxx  image.h  image.hxx  instance.cxx  instance.h  instance.hxx  isle_math.h  isle_math.hxx  loaderGLTF.cxx  loaderTARGA.cxx  main.cxx  main.h  main.hxx  material.hxx  (+40 more)
VulkanIsland/src/Camera/: CameraController.cxx  CameraController.hxx
VulkanIsland/src/camera/: camera.cxx  camera.hxx  cameraController.cxx  cameraController.hxx  camera_controller.hxx
VulkanIsland/src/camera/handlers/: mouseHandler.cxx  mouseHandler.hxx  mouse_handler.cxx
VulkanIsland/src/device/: device.cxx  device.hxx
VulkanIsland/src/ecs/: camera.cxx  camera.hxx  ecs.hxx  mesh.hxx  node.cxx  node.hxx  transform.cxx  transform.hxx
VulkanIsland/src/graphics/: attachments.cxx  attachments.hxx  compatibility.hxx  descriptors.cxx  descriptors.hxx  framebuffer.cxx  framebuffer.hxx  graphics.cxx  graphics.hxx  graphics_api.cxx  graphics_api.hxx  graphics_pipeline.cxx  graphics_pipeline.hxx  material.cxx  material.hxx  pipeline_states.hxx  renderPass.cxx  renderPass.hxx  render_flow.cxx  render_flow.hxx  render_pass.cxx  render_pass.hxx  shader_program.cxx  shader_program.hxx  vertex.cxx  vertex.hxx
VulkanIsland/src/image.cxx/: image.cxx
VulkanIsland/src/input/: InputManager.cxx  InputManager.hxx  MouseInput.cxx  MouseInput.hxx  inputDataTypes.hxx  inputManager.cxx  inputManager.hxx  input_data_types.hxx  input_manager.cxx  input_manager.hxx  mouseInput.cxx  mouseInput.hxx  mouse_input.cxx  mouse_input.hxx
VulkanIsland/src/loaders/: SPIRV_loader.cxx  TARGA_loader.cxx  TARGA_loader.hxx  image_loader.cxx  loaderGLTF.cxx  loaderGLTF.hxx  loaderSPIRV.hxx  loaderTARGA.cxx  loaderTARGA.hxx  material_loader.cxx  material_loader.hxx  scene_loader.hxx
VulkanIsland/src/math/: math.hxx  pack-unpack.hxx
VulkanIsland/src/platform/: window.cxx  window.hxx
VulkanIsland/src/platform/input/: input_manager.cxx  mouse.cxx  mouse.hxx
VulkanIsland/src/primitives/: box.cxx  plane.cxx  primitives.cxx  primitives.hxx
VulkanIsland/src/renderer/: attachments.cxx  attachments.hxx  command_buffer.cxx  command_buffer.hxx  compatibility.hxx  config.cxx  config.hxx  debug.cxx  debug.hxx  descriptor.hxx  device.cxx  device.hxx  device_config.hxx  framebuffer.hxx  graphics.hxx  graphics_api.cxx  graphics_api.hxx  graphics_pipeline.cxx  graphics_pipeline.hxx  instance.cxx  instance.hxx  material.cxx  material.hxx  material_description.hxx  pipelineVertexInputState.cxx  pipelineVertexInputState.hxx  pipeline_states.hxx  pipelines.cxx  pipelines.hxx  queue_builder.hxx  queues.hxx  renderPass.cxx  renderPass.hxx  render_flow.cxx  render_flow.hxx  render_pass.hxx  renderer.cxx  renderer.hxx  shader_program.cxx  shader_program.hxx  (+11 more)
VulkanIsland/src/resources/: buffer.cxx  buffer.hxx  framebuffer.cxx  framebuffer.hxx  image.cxx  image.hxx  manager.cxx  manager.hxx  memory.cxx  memory.hxx  memory_manager.cxx  memory_manager.hxx  program.cxx  program.hxx  resource.cxx  resource.hxx  resource_manager.cxx  resource_manager.hxx  semaphore.hxx  sync_objects.hxx
VulkanIsland/src/utility/: exceptions.hxx  helpers.hxx  mpl.hxx
VulkanIsland/src/vulkan/: debug.cxx  debug.hxx  device.cxx  device.hxx  device_config.hxx  device_limits.hxx  instance.cxx  instance.hxx  queue_factory.hxx
contents/: compile-materials.py
contents/chalet/: scene.gltf
contents/materials/: debug-material.json
contents/materials/debug/: color-debug-material.json  normal-debug.json  normal-vectors-debug-material.json  normals-debug.json  solid-wireframe.json  texture-coordinate-debug.json  texture-debug.json
contents/materials/lighting/: blinn-phong-material.json
contents/scenes/FlightHelmet/: scene.gltf
contents/scenes/Hebe/: scene.gltf
contents/scenes/cube/: scene.gltf
contents/scenes/simple-meshes/: scene.gltf
contents/scenes/triangle-indexed/: scene.gltf
contents/scenes/triangle-non-indexed/: scene.gltf
contents/shaders/: shader.frag.glsl  shader.vert.glsl  shader.vert.json
engine/: CMakeLists.txt  engine.vcxproj
engine/include/: config.hxx.in  vulkan_config.hxx
engine/src/: app.cxx  app.hxx  descriptor.cxx  descriptor.hxx  main.cxx  main.hxx
glsl2spirv/: compile-shaders.py  glsl2spirv.pyproj  main.py
scripts/: abstract_shader_preprocessor.py  compile_materials.py  glsl_preprocessor.py  hlsl_preprocessor.py  material_technique.py  shader_constants.py  shader_module_info.py
scripts/pymodules/: __init__.py  custom_exceptions.py  utils.py
shaders/: shader.frag  shader.vert
shaders/test/: shader.frag  shader.vert  shaderA.frag  shaderA.vert  shaderB.frag  shaderB.vert
(+165 files in other folders)
